--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "type": "module",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only --esm src/index.ts",
+    "dev": "tsm src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "prisma:migrate": "prisma migrate dev",
     "prisma:generate": "prisma generate",
     "seed": "node --loader ts-node/esm src/seed.ts",
     "lint": "eslint src/**/*.ts",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "db:migrate": "psql $DATABASE_URL -f database/package-schema.sql",
+    "db:seed": "psql $DATABASE_URL -f database/package-seed.sql"
   },
   "dependencies": {
     "@prisma/client": "^5.8.0",
@@ -49,6 +51,7 @@
     "@types/morgan": "^1.9.9",
     "@types/ms": "^2.1.0",
     "@types/node": "^20.10.6",
+    "@types/pg": "^8.16.0",
     "@types/qs": "^6.14.0",
     "@types/range-parser": "^1.2.7",
     "@types/swagger-jsdoc": "^6.0.4",
@@ -64,6 +67,7 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
+    "tsm": "^2.3.0",
     "typescript": "^5.3.3"
   },
   "engines": {
