--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "nodemailer": "^7.0.11",
     "pg": "^8.11.3",
     "redis": "^4.6.11",
+    "xlsx": "^0.18.5",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0",
     "uuid": "^9.0.1"
